[package]
name = "mold2d"
version = "0.0.2"
authors = ["Darin Minamoto <darinm223@gmail.com>"]
description = "A simple platformer game library in Rust"
repository = "https://github.com/DarinM223/mold2d"
readme = "README.md"
keywords = ["game", "library", "actors"]
license = "MIT"

[dependencies]
libc = "0.2"

[dependencies.sdl2]
version = "0.29"
default-features = false
features = ["ttf", "image"]

[lib]
doctest = false
