[package]
name = "mold2d"
version = "0.1.0"
authors = ["Darin Minamoto <darinm223@gmail.com>"]
description = "A simple platformer game library in Rust"
repository = "https://github.com/DarinM223/mold2d"
readme = "README.md"
keywords = ["game", "library", "actors"]
license = "MIT"
edition = "2024"

[dependencies]
libc = "0.2"
lazy_static = "1.5.0"

[dependencies.sdl2]
version = "0.31"
default-features = false
features = ["ttf", "image", "unsafe_textures"]

[lib]
doctest = false
