[package]
name = "game"
version = "0.1.0"
authors = ["Darin Minamoto <darinm223@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.3"
clippy = { version = "*", optional = true }

[dependencies.mold2d]
path = "../../"

[dependencies.sdl2]
version = "0.29"
default-features = false
features = ["ttf", "image"]

[profile.release]
debug = true
debug-assertions = false

[profile.dev]
debug-assertions = false